force-app/main/default/objects/DosuSign_for_Automotive__c/DosuSign_for_Automotive__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting contains the DocuSign related things for Automotive.</description>
    <label>DocuSign for Automotive</label>
</CustomObject>