force-app/main/default/objects/DosuSign_for_Automotive__c/fields/DocuSign_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Template_Name__c</fullName>
    <description>This field will have the DocuSign Template Name as a reference for the Template Id in the field &apos;DST&apos;.</description>
    <label>DocuSign Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>