force-app/main/default/objects/DosuSign_for_Automotive__c/fields/DST__c.field-meta.xml
<CustomField>
    <fullName>DST__c</fullName>
    <description>DocuSignTemplate(DST). This field will have the DocuSign Template Id which is in the DocuSign. This may differ between DocuSign PROD and Demo.</description>
    <label>DST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>