force-app/main/default/objects/DosuSign_for_Automotive__c/fields/Page_Message__c.field-meta.xml
<CustomField>
    <fullName>Page_Message__c</fullName>
    <description>This field contains the Page messages those that  are shown on the Visualforce pages.</description>
    <label>Page Message</label>
    <type>TextArea</type>
</CustomField>