force-app/main/default/objects/DosuSign_for_Automotive__c/fields/Permission_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Name__c</fullName>
    <description>This field has the Permission Set Name that is allowed to use the &quot;DocuSign for Automotive&quot;</description>
    <label>Permission Set Name (API)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>