force-app/main/default/objects/DosuSign_for_Automotive__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>This field has the Profile Name that is allowed to use the &quot;DocuSign for Automotive&quot;</description>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>