force-app/main/default/objects/DosuSign_for_Automotive__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>This field contains the Email id of the User</description>
    <label>User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>