force-app/main/default/objects/DosuSign_for_Automotive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>DocuSign_Template_Name__c</columns>
    <columns>DST__c</columns>
    <columns>User_Email__c</columns>
    <columns>Profile_Name__c</columns>
    <columns>Permission_Set_Name__c</columns>
    <columns>Page_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>